--- a/reroute.ipynb
+++ b/reroute.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9b5fb09a",
    "metadata": {},
    "outputs": [
@@ -73,72 +73,213 @@
    "source": [
     "import json\n",
     "import networkx as nx\n",
+    "from collections import defaultdict\n",
     "from networkx.algorithms.simple_paths import shortest_simple_paths\n",
     "\n",
-    "# Load the JSON with precomputed paths (no domestic hops)\n",
-    "with open('no_domestic_hops.json') as f:\n",
-    "    data = json.load(f)\n",
+    "def normalize_node(lp):\n",
+    "    return f\"{lp['city'].strip()}, {lp['country'].strip()}\"\n",
     "\n",
-    "# Build the graph from features\n",
-    "graph = nx.Graph()\n",
-    "node_coords = {}\n",
+    "def get_coords(lp):\n",
+    "    return tuple(lp[\"coordinates\"])\n",
     "\n",
-    "for feature in data['features']:\n",
-    "    path = feature['properties']['path']\n",
-    "    cables = feature['properties']['cables']\n",
-    "    for node in path:\n",
-    "        graph.add_node(node)\n",
-    "    for u, v, cable in zip(path, path[1:], cables):\n",
-    "        graph.add_edge(u, v, cable=cable)\n",
+    "def compute_paths(\n",
+    "    json_file=\"codes/cable-and-landing-points.json\",\n",
+    "    allowed_countries=None,\n",
+    "    blacklisted_countries=None,\n",
+    "    damaged_cables=None,\n",
+    "    source_nodes=None,\n",
+    "    destination_nodes=None,\n",
+    "    max_paths_per_pair=10,\n",
+    "    max_cables_allowed=6,\n",
+    "    output_file=\"codes/timepass.geojson\"\n",
+    "):\n",
+    "    # Default sets if not provided\n",
+    "    if allowed_countries is None:\n",
+    "        allowed_countries = {\n",
+    "            \"India\", \"Australia\", \"Sri Lanka\", \"Myanmar\", \"Thailand\", \"Cambodia\",\n",
+    "            \"Vietnam\", \"Malaysia\", \"Indonesia\", \"Singapore\", \"Papua New Guinea\",\n",
+    "            \"Brunei\", \"Timor-Leste\", \"Philippines\", \"Solomon Islands\"\n",
+    "        }\n",
+    "    if blacklisted_countries is None:\n",
+    "        blacklisted_countries = set()\n",
+    "    if damaged_cables is None:\n",
+    "        damaged_cables = set()\n",
     "\n",
-    "# Collect unique cables\n",
-    "all_cables = sorted({d['cable'] for _, _, d in graph.edges(data=True)})\n",
+    "    with open(json_file, \"r\") as f:\n",
+    "        cable_and_landing_points = json.load(f)\n",
     "\n",
-    "def list_routes(G, source, target, k=5):\n",
-    "    try:\n",
-    "        paths = shortest_simple_paths(G, source, target)\n",
-    "        results = []\n",
-    "        for _, p in zip(range(k), paths):\n",
-    "            cables = [G.get_edge_data(p[i], p[i+1])['cable'] for i in range(len(p)-1)]\n",
-    "            results.append((p, cables))\n",
-    "        return results\n",
-    "    except nx.NetworkXNoPath:\n",
-    "        return []\n",
+    "    G = nx.Graph()\n",
+    "    node_coords = {}\n",
+    "    node_country = {}\n",
+    "    allowed_nodes = set()\n",
+    "    india_nodes = set()\n",
+    "    australia_nodes = set()\n",
+    "    cable_to_nodes = defaultdict(set)\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    # Display available cables with numbering\n",
-    "    print(\"Available cables to disable:\")\n",
-    "    for idx, cable in enumerate(all_cables, 1):\n",
-    "        print(f\" {idx}. {cable}\")\n",
+    "    for cable in cable_and_landing_points:\n",
+    "        cable_name = cable[\"cable_name\"]\n",
+    "        if cable_name in damaged_cables:\n",
+    "            continue\n",
     "\n",
-    "    # Prompt user to select cable\n",
-    "    choice = input(\"\\nEnter the number of the cable to disable (e.g. 1): \")\n",
-    "    try:\n",
-    "        choice_index = int(choice) - 1\n",
-    "        disabled_cable = all_cables[choice_index]\n",
-    "    except (ValueError, IndexError):\n",
-    "        print(f\"Invalid selection '{choice}'. Exiting.\")\n",
-    "        exit(1)\n",
+    "        lps = cable[\"landing_points\"]\n",
+    "        for i in range(len(lps)):\n",
+    "            lp_i = lps[i]\n",
+    "            node_i = normalize_node(lp_i)\n",
+    "            coord_i = get_coords(lp_i)\n",
+    "            country_i = lp_i[\"country\"]\n",
     "\n",
-    "    # Remove the chosen cable's edges\n",
-    "    H = graph.copy()\n",
-    "    to_remove = [(u, v) for u, v, d in H.edges(data=True) if d.get('cable') == disabled_cable]\n",
-    "    H.remove_edges_from(to_remove)\n",
-    "    print(f\"Removed edges for cable '{disabled_cable}' (total removed: {len(to_remove)})\\n\")\n",
+    "            node_coords[node_i] = coord_i\n",
+    "            node_country[node_i] = country_i\n",
+    "            cable_to_nodes[cable_name].add(node_i)\n",
     "\n",
-    "    # Prompt for source and target\n",
-    "    source = input(\"Enter source node (e.g. Trivandrum, India): \")\n",
-    "    target = input(\"Enter target node (e.g. Brisbane, Australia): \")\n",
+    "            if country_i in allowed_countries and country_i not in blacklisted_countries:\n",
+    "                allowed_nodes.add(node_i)\n",
     "\n",
-    "    print(f\"\\nFinding alternate routes from {source} to {target}...\\n\")\n",
-    "    alt_routes = list_routes(H, source, target, k=5)\n",
-    "    if not alt_routes:\n",
-    "        print(\"No alternate path found.\")\n",
+    "            if country_i == \"India\":\n",
+    "                india_nodes.add(node_i)\n",
+    "            elif country_i == \"Australia\":\n",
+    "                australia_nodes.add(node_i)\n",
+    "\n",
+    "            for j in range(i + 1, len(lps)):\n",
+    "                lp_j = lps[j]\n",
+    "                node_j = normalize_node(lp_j)\n",
+    "                coord_j = get_coords(lp_j)\n",
+    "                country_j = lp_j[\"country\"]\n",
+    "\n",
+    "                node_coords[node_j] = coord_j\n",
+    "                node_country[node_j] = country_j\n",
+    "                cable_to_nodes[cable_name].add(node_j)\n",
+    "\n",
+    "                if country_j in allowed_countries and country_j not in blacklisted_countries:\n",
+    "                    allowed_nodes.add(node_j)\n",
+    "\n",
+    "                if country_j == \"India\":\n",
+    "                    india_nodes.add(node_j)\n",
+    "                elif country_j == \"Australia\":\n",
+    "                    australia_nodes.add(node_j)\n",
+    "\n",
+    "                if (country_i == country_j) or \\\n",
+    "                   (country_i in blacklisted_countries) or \\\n",
+    "                   (country_j in blacklisted_countries):\n",
+    "                    continue\n",
+    "\n",
+    "                if country_i in allowed_countries and country_j in allowed_countries:\n",
+    "                    G.add_edge(node_i, node_j, cable=cable_name)\n",
+    "\n",
+    "    subG = G.subgraph(allowed_nodes)\n",
+    "\n",
+    "    if source_nodes is None:\n",
+    "        source_nodes = {\n",
+    "            node for node in india_nodes\n",
+    "            if node in subG and any(node_country[neighbor] != \"India\" for neighbor in subG.neighbors(node))\n",
+    "        }\n",
     "    else:\n",
-    "        for idx, (path, cables) in enumerate(alt_routes, 1):\n",
-    "            print(f\"Route {idx}:\")\n",
-    "            print(\"  Path:  \", \" -> \".join(path))\n",
-    "            print(\"  Cables:\", \" -> \".join(cables), \"\\n\")\n"
+    "        source_nodes = set(source_nodes).intersection(subG.nodes)\n",
+    "\n",
+    "    if destination_nodes is None:\n",
+    "        destination_nodes = australia_nodes.intersection(subG.nodes)\n",
+    "    else:\n",
+    "        destination_nodes = set(destination_nodes).intersection(subG.nodes)\n",
+    "\n",
+    "    valid_paths = []\n",
+    "    for source in source_nodes:\n",
+    "        for target in destination_nodes:\n",
+    "            try:\n",
+    "                path_gen = shortest_simple_paths(subG, source, target)\n",
+    "                count = 0\n",
+    "                for path in path_gen:\n",
+    "                    if count >= max_paths_per_pair:\n",
+    "                        break\n",
+    "\n",
+    "                    cables = []\n",
+    "                    valid = True\n",
+    "                    for i in range(len(path) - 1):\n",
+    "                        n1, n2 = path[i], path[i + 1]\n",
+    "                        edge_data = subG.get_edge_data(n1, n2)\n",
+    "                        cable = edge_data.get(\"cable\")\n",
+    "\n",
+    "                        if not cable or cable in damaged_cables:\n",
+    "                            valid = False\n",
+    "                            break\n",
+    "                        if node_country[n1] == node_country[n2]:\n",
+    "                            valid = False\n",
+    "                            break\n",
+    "\n",
+    "                        cables.append(cable)\n",
+    "\n",
+    "                    if valid and len(set(cables)) <= max_cables_allowed:\n",
+    "                        valid_paths.append({\n",
+    "                            \"path\": path,\n",
+    "                            \"cables\": cables\n",
+    "                        })\n",
+    "                        count += 1\n",
+    "            except nx.NetworkXNoPath:\n",
+    "                continue\n",
+    "\n",
+    "    geojson_features = []\n",
+    "    for item in valid_paths:\n",
+    "        coordinates = [node_coords[n] for n in item[\"path\"]]\n",
+    "        feature = {\n",
+    "            \"type\": \"Feature\",\n",
+    "            \"properties\": {\n",
+    "                \"path\": item[\"path\"],\n",
+    "                \"cables\": item[\"cables\"],\n",
+    "                \"cable_count\": len(set(item[\"cables\"]))\n",
+    "            },\n",
+    "            \"geometry\": {\n",
+    "                \"type\": \"LineString\",\n",
+    "                \"coordinates\": coordinates\n",
+    "            }\n",
+    "        }\n",
+    "        geojson_features.append(feature)\n",
+    "\n",
+    "    geojson_output = {\n",
+    "        \"type\": \"FeatureCollection\",\n",
+    "        \"features\": geojson_features\n",
+    "    }\n",
+    "\n",
+    "    with open(output_file, \"w\") as f:\n",
+    "        json.dump(geojson_output, f, indent=2)\n",
+    "\n",
+    "    print(f\"Saved {len(geojson_features)} valid paths using ≤ {max_cables_allowed} cables.\\n\")\n",
+    "    for item in valid_paths:\n",
+    "        print(\" → \".join(item[\"path\"]))\n",
+    "        print(\"  Cables:\", \" → \".join(item[\"cables\"]))\n",
+    "        print()\n",
+    "\n",
+    "# Example usage:\n",
+    "# compute_paths(blacklisted_countries={}, damaged_cables={})\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_dropdown_options(json_file=\"codes/cable-and-landing-points.json\"):\n",
+    "    with open(json_file, \"r\") as f:\n",
+    "        cable_and_landing_points = json.load(f)\n",
+    "\n",
+    "    india_nodes = set()\n",
+    "    australia_nodes = set()\n",
+    "    all_countries = set()\n",
+    "    all_cables = set()\n",
+    "\n",
+    "    for cable in cable_and_landing_points:\n",
+    "        all_cables.add(cable[\"cable_name\"])\n",
+    "        for lp in cable[\"landing_points\"]:\n",
+    "            country = lp[\"country\"]\n",
+    "            city = lp[\"city\"]\n",
+    "            node = f\"{city.strip()}, {country.strip()}\"\n",
+    "\n",
+    "            all_countries.add(country)\n",
+    "            if country == \"India\":\n",
+    "                india_nodes.add(node)\n",
+    "            elif country == \"Australia\":\n",
+    "                australia_nodes.add(node)\n",
+    "\n",
+    "    return {\n",
+    "        \"source_nodes\": sorted(india_nodes),\n",
+    "        \"destination_nodes\": sorted(australia_nodes),\n",
+    "        \"countries\": sorted(all_countries),\n",
+    "        \"cables\": sorted(all_cables),\n",
+    "    }"
    ]
   }
  ],
